--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,7 @@
     <title>Hello App</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;400&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet" />
   </head>
   <body>
     <div id="root"></div>
